--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  smooth_page_indicator: ^1.2.0+3
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
